--- a/index.html
+++ b/index.html
@@ -44,7 +44,9 @@
       <div class="thank-image">
         <img src="./images/illustration-thank-you.svg" alt="">
       </div>
-      <p>You selected <span id="selectedRate"></span> out of 5</p>
+      <div class="thank-selection">
+        <p>You selected <span id="selectedRate"></span> out of 5</p>
+      </div>
       <h2>Thank you!</h2>
       <p>We appreciate you taking the time to give a rating. If you ever need more support,
         don’t hesitate to get in touch!</p>
